# rs-ai

./: Cargo.toml  cp
src/: main.rs
