[package]
name = "rs-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
chrono = "0.4.24"
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = "0.11.18"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
uuid = { version = "1.3.3", features = ["v4"] }
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
